--- a/css/main.css
+++ b/css/main.css
@@ -223,42 +223,20 @@ hr {
     top: 0;
 }
 
-figure {
+/*.card {
     -webkit-box-shadow: 0 0 1px rgba(0,0,0,.6);
     box-shadow: 0 0 1px rgba(0,0,0,.6);
     margin: 1% 0 1% 1.19%;
-    /*position: relative;*/
-    /*overflow: hidden;*/
-    /*float: left;*/
-}
-
-/*.people figure {
-    display: block;
-}
-
-.people img {
-    width: 100%;
-    display: block;
-    margin: none;
-    padding-bottom: none;
-}
-.people figcaption {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
+    border-radius: 1px;
 }*/
-
-.card-deck {
-    float: left;
+.card-img-top {
+    border-radius: 1px;
 }
-
 .card-text {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
 }
 
-#cersei-card {
-    display: flex;
-}
 #cersei-h1 {
     text-transform: capitalize;
     color: #ffffff;
@@ -268,6 +246,13 @@ figure {
 #cersei-h2 {
     color: #ffffff;
 }
+
+.list-group-item {
+    border: none;
+    background-color: #E0E0E0;
+    font-size: 1.5em;
+}
+
 
 /* Large devices (desktops, less than 1200px) */
 @media (max-width: 1199px) {
