--- a/css/main.css
+++ b/css/main.css
@@ -223,19 +223,44 @@ hr {
     top: 0;
 }
 
-/*.card {
-    -webkit-box-shadow: 0 0 1px rgba(0,0,0,.6);
-    box-shadow: 0 0 1px rgba(0,0,0,.6);
-    margin: 1% 0 1% 1.19%;
-    border-radius: 1px;
-}*/
+#people-heading {
+    display: table;
+    margin: 0 auto;
+    padding: 25px 0;
+    color: #000;
+}
 
 .card-img-top {
     border-radius: 1px;
 }
+
 .card-text {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
+}
+
+.people-card {
+    padding-bottom: 10px;
+}
+
+.card-title {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    line-height: 1em;
+    margin: 12px 0 0 10px;
+}
+
+.card-subtitle {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    line-height: 1em;
+    margin: 0 0 0 10px;
+    /*display: inline;*/
+}
+
+#people-row: {
+    max-height: 546px;
 }
 
 #cersei-h1 {
@@ -248,11 +273,27 @@ hr {
     color: #ffffff;
 }
 
-.list-group-item {
-    border: none;
-    background-color: #E0E0E0;
-    font-size: 1.5em;
+#cersei-card {
+    height: 546px;
 }
+
+
+.plus {
+    line-height: 69px;
+    width: 25%;
+    border: none;
+    border-radius: 0;
+    background-color: #E0E0E0;
+    color: #5d5d5d;
+    font-size: 1.5rem;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    /*z-index: 0;*/
+}
+
+
 
 
 /* Large devices (desktops, less than 1200px) */
